Fix various design bug + add place and date on mobile

--- a/app/assets/stylesheets/pages/_react.scss
+++ b/app/assets/stylesheets/pages/_react.scss
@@ -13,6 +13,7 @@ $width: 320px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 20px;
   height: 480px;
 
   @media(max-width: 520px) {
@@ -56,6 +57,7 @@ $width: 320px;
       margin-bottom: 20px;
       max-width: 70%;
       font-size: 22px;
+      line-height: 1.4em;
       color: #333;
 
       @media(max-width: 520px) {
@@ -146,8 +148,13 @@ $width: 320px;
     }
   }
 
-  i {
+  .disclaimer {
     font-size: 14px;
+
+     @media(max-width: 520px) {
+      max-width: 250px;
+      text-align: center;
+    }
   }
 
   .btn-danger {
@@ -164,6 +171,10 @@ $width: 320px;
 .react-content {
   position: relative;
   margin-top: 60px;
+
+  @media(max-width: 520px) {
+    padding: 0 10px;
+  }
 
   h2 {
     text-transform: uppercase;
@@ -194,6 +205,31 @@ $width: 320px;
 
   .section {
     margin: 60px 0;
+
+    @media(max-width: 520px) {
+      margin: 35px 0;
+    }
+  }
+
+  .section-mobile {
+    display: flex;
+    flex-direction: column;
+    padding-top: 15px;
+
+    span {
+      margin-bottom: 6px;
+      font-style: normal;
+      font-size: 18px;
+      opacity: 0.8;
+
+      .fa {
+        margin-right: 10px;
+      }
+    }
+
+    @media(min-width: 992px) {
+      display: none;
+    }
   }
 
   .section-intro {
